# jsontoolkit

./: .cirrus.yml  .gitignore  Brewfile  Brewfile.lock.json  CHANGELOG.markdown  CMakeLists.txt  Config.uk  DEPENDENCIES  Makefile  Makefile.uk  README.markdown  README.md  config.cmake.in  package-lock.json  package.json  test.cc  vcpkg.json  vendorpull.mask
backends/rapidjson/: CMakeLists.txt  json.cc
benchmark/: CMakeLists.txt  compiler_draft6.cc  draft6_adaptivecard.json  evaluator_2020_12.cc  evaluator_draft4.cc  evaluator_draft6.cc  evaluator_draft7.cc  json.cc  jsonpointer.cc  jsonschema.cc  jsonschema_compiler.cc  jsonschema_validator.cc  regex.cc  validator_helper.cc
benchmark/Linux (GCC)/: data.js
benchmark/Linux (LLVM)/: data.js
benchmark/Windows/: data.js
benchmark/compiler/: CMakeLists.txt  basic.cc
benchmark/jsonschema/: CMakeLists.txt  compiler_basic.cc  validator.cc
benchmark/macOS/: data.js
benchmark/macos/: data.js
benchmark/schemas/: 2019_09_omc_json_v2.json  draft4_nested_oneof.json  draft7_nested_oneof.json
benchmark/windows/: data.js
contrib/jsonschema-keywords/: CMakeLists.txt  main.cc
contrib/jsonschema-walker/: CMakeLists.txt  walker.cc
contrib/jsonschema_frame/: CMakeLists.txt  main.cc
contrib/jsonschema_keywords/: CMakeLists.txt  main.cc
contrib/jsonschema_walker/: CMakeLists.txt  walker.cc
contrib/minify/: CMakeLists.txt  minify.cc
contrib/prettify/: CMakeLists.txt  prettify.cc
contrib/resolver/: CMakeLists.txt  curl.cc  resolver.cc  schemas.h.in
src/json/: CMakeLists.txt  grammar.h  json.cc  json_value.cc  parser.h  stringify.h
src/jsonl/: CMakeLists.txt  iterator.cc
src/jsonpointer/: CMakeLists.txt  grammar.h  jsonpointer.cc  parser.h  stringify.h
src/jsonschema/: CMakeLists.txt  anchor.cc  bundle.cc  compile.cc  compile_describe.cc  compile_evaluate.cc  compile_helpers.h  compile_json.cc  default_compiler.cc  default_compiler_2019_09.h  default_compiler_2020_12.h  default_compiler_draft0.h  default_compiler_draft4.h  default_compiler_draft6.h  default_compiler_draft7.h  default_metaschemas.h.in  default_resolver.cc  default_resolver.in.cc  default_walker.cc  explain.cc  frame.cc  jsonschema.cc  keywords.cc  metaschemas.cmake  reference.cc  reference_frame.cc  relativize.cc  resolver.cc  transform_bundle.cc  transform_rule.cc  transformer.cc  unevaluated.cc  walker.cc
src/regex/: CMakeLists.txt  regex.cc
src/uri/: CMakeLists.txt  uri.cc
test/: CMakeLists.txt  json_iterators_test.cc  json_parse_error_test.cc  json_read_test.cc  json_stringify_test.cc  json_test.cc  json_write_test.cc  jsontestsuite.cc
test/alterschema/: CMakeLists.txt  alterschema_lint_2019_09_test.cc  alterschema_lint_2020_12_test.cc  alterschema_lint_draft0_test.cc  alterschema_lint_draft1_test.cc  alterschema_lint_draft2_test.cc  alterschema_lint_draft3_test.cc  alterschema_lint_draft4_test.cc  alterschema_lint_draft6_test.cc  alterschema_lint_draft7_test.cc  alterschema_test_utils.h
test/contrib/: CMakeLists.txt  example-2020-12-subschemas.txt  example-2020-12.json  example_2020_12.json  example_2020_12_subschemas_deep.txt  example_2020_12_subschemas_flat.txt  fail.sh  is_same.bat  is_same.sh  is_same_stdin.bat  is_same_stdin.sh  minify_output.json  prettify-invalid.json  prettify_input.json  prettify_output.json
test/evaluator/: CMakeLists.txt  evaluator_2019_09_test.cc  evaluator_2020_12_test.cc  evaluator_draft4_test.cc  evaluator_draft6_test.cc  evaluator_draft7_test.cc  evaluator_evaluate_test.cc  evaluator_test.cc  evaluator_utils.h  officialsuite.cc
test/json/: CMakeLists.txt  json_array_test.cc  json_boolean_test.cc  json_error_test.cc  json_flat_map_test.cc  json_hash_test.cc  json_integer_test.cc  json_iterators_test.cc  json_null_test.cc  json_number_test.cc  json_object_test.cc  json_parse_callback_test.cc  json_parse_error_test.cc  json_parse_test.cc  json_parser_test.cc  json_prettify_test.cc  json_read_test.cc  json_real_test.cc  json_string_test.cc  json_stringify_test.cc  json_type_test.cc  json_value_test.cc  json_write_test.cc  jsontestsuite.cc  stub_bigint.json  stub_invalid.json  stub_valid.json
test/jsonl/: CMakeLists.txt  jsonl_parse_error_test.cc  jsonl_parse_test.cc
test/jsonpointer/: CMakeLists.txt  jsonpointer_concat_test.cc  jsonpointer_empty_pointer_test.cc  jsonpointer_error_test.cc  jsonpointer_get_test.cc  jsonpointer_has_test.cc  jsonpointer_parse_error_test.cc  jsonpointer_parse_test.cc  jsonpointer_pointer_test.cc  jsonpointer_position_test.cc  jsonpointer_proxy_test.cc  jsonpointer_rebase_test.cc  jsonpointer_resolve_from_test.cc  jsonpointer_set_test.cc  jsonpointer_starts_with_initial_test.cc  jsonpointer_starts_with_test.cc  jsonpointer_stringify_test.cc  jsonpointer_subpointer_walker_test.cc  jsonpointer_template_test.cc  jsonpointer_to_string_test.cc  jsonpointer_to_uri_test.cc  jsonpointer_token_test.cc  jsonpointer_try_get_test.cc  jsonpointer_walker_test.cc  jsonpointer_weakpointer_test.cc
test/jsonschema/: CMakeLists.txt  jsonschema_anchor_2019_09_test.cc  jsonschema_anchor_2020_12_test.cc  jsonschema_anchor_draft4_test.cc  jsonschema_anchor_draft6_test.cc  jsonschema_anchor_draft7_test.cc  jsonschema_base_dialect_2019_09_test.cc  jsonschema_base_dialect_2020_12_test.cc  jsonschema_base_dialect_draft0_test.cc  jsonschema_base_dialect_draft1_test.cc  jsonschema_base_dialect_draft2_test.cc  jsonschema_base_dialect_draft3_test.cc  jsonschema_base_dialect_draft4_test.cc  jsonschema_base_dialect_draft6_test.cc  jsonschema_base_dialect_draft7_test.cc  jsonschema_base_dialect_test.cc  jsonschema_bundle_2019_09_test.cc  jsonschema_bundle_2020_12_test.cc  jsonschema_bundle_draft0_test.cc  jsonschema_bundle_draft1_test.cc  jsonschema_bundle_draft2_test.cc  jsonschema_bundle_draft3_test.cc  jsonschema_bundle_draft4_test.cc  jsonschema_bundle_draft6_test.cc  jsonschema_bundle_draft7_test.cc  jsonschema_bundle_test.cc  jsonschema_compile_2019_09_test.cc  jsonschema_compile_2020_12_test.cc  jsonschema_compile_draft4_test.cc  jsonschema_compile_draft6_test.cc  jsonschema_compile_draft7_test.cc  (+120 more)
(+386 files in other folders)
