add_executable(sourcemeta_jsontoolkit_jsonschema_frame main.cc)
sourcemeta_jsontoolkit_add_compile_options(sourcemeta_jsontoolkit_jsonschema_frame)
target_link_libraries(sourcemeta_jsontoolkit_jsonschema_frame
  PRIVATE sourcemeta::jsontoolkit::json)
target_link_libraries(sourcemeta_jsontoolkit_jsonschema_frame
  PRIVATE sourcemeta::jsontoolkit::jsonpointer)
target_link_libraries(sourcemeta_jsontoolkit_jsonschema_frame
  PRIVATE sourcemeta::jsontoolkit::jsonschema)
set_target_properties(sourcemeta_jsontoolkit_jsonschema_frame PROPERTIES
  OUTPUT_NAME jsonschema_frame
  FOLDER "JSON Toolkit/Contrib")
install(TARGETS sourcemeta_jsontoolkit_jsonschema_frame
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  COMPONENT sourcemeta_jsontoolkit_contrib)
