add_executable(sourcemeta_jsontoolkit_jsonschema_walker walker.cc)
sourcemeta_jsontoolkit_add_compile_options(sourcemeta_jsontoolkit_jsonschema_walker)
target_link_libraries(sourcemeta_jsontoolkit_jsonschema_walker
  PRIVATE sourcemeta::jsontoolkit::json)
target_link_libraries(sourcemeta_jsontoolkit_jsonschema_walker
  PRIVATE sourcemeta::jsontoolkit::jsonpointer)
target_link_libraries(sourcemeta_jsontoolkit_jsonschema_walker
  PRIVATE sourcemeta::jsontoolkit::jsonschema)
set_target_properties(sourcemeta_jsontoolkit_jsonschema_walker PROPERTIES
  OUTPUT_NAME jsontoolkit_jsonschema-walker
  FOLDER "JSON Toolkit/Contrib")
install(TARGETS sourcemeta_jsontoolkit_jsonschema_walker
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  COMPONENT sourcemeta_jsontoolkit_contrib)
